[package]
name = "deli-derive"
version = "0.2.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A convenience wrapper on `idb` crate for easily creating and managing object stores in an indexed db on browsers using derive macros"
homepage = "https://github.com/devashishdxt/deli"
repository = "https://github.com/devashishdxt/deli"
categories = ["asynchronous", "database", "wasm", "web-programming"]
keywords = ["wasm", "indexeddb", "future", "webassembly", "idb"]
readme = "README.md"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
darling = "0.20"
ident_case = "1"
proc-macro2 = "1"
quote = "1"
syn = "2"
