[package]
name = "deli"
version = "0.2.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A convenience wrapper on `idb` crate for easily creating and managing object stores in an indexed db on browsers using derive macros"
homepage = "https://github.com/devashishdxt/deli"
repository = "https://github.com/devashishdxt/deli"
categories = ["asynchronous", "database", "wasm", "web-programming"]
keywords = ["wasm", "indexeddb", "future", "webassembly", "idb"]
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deli-derive = { version = "0.1.1", path = "../deli-derive" }
idb = "0.6.3"
serde = "1.0.163"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.96"
thiserror = "1.0.40"

[dev-dependencies]
serde = { version = "1.0.163", features = ["derive"] }
wasm-bindgen-test = "0.3.36"
