[package]
name = "deli"
version = "0.2.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Provides an ergonomic way to define data models that are seamlessly converted into IndexedDB object stores, utilizing derive macros"
homepage = "https://github.com/devashishdxt/deli"
repository = "https://github.com/devashishdxt/deli"
categories = ["asynchronous", "database", "wasm", "web-programming"]
keywords = ["wasm", "indexeddb", "future", "webassembly", "idb"]
readme = "README.md"
edition = "2021"

[features]
default = ["derive"]
derive = ["dep:deli-derive"]

[dependencies]
deli-derive = { version = "0.2.0", path = "../deli-derive", optional = true }
idb = { version = "0.6", features = ["builder"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
thiserror = "2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
